# HW3D

./: .gitignore  CMakeLists.txt  draw_debug.py  generate_triangles.py  triangles.txt
src/: main.cpp
src/Renderer/: CMakeLists.txt
src/Renderer/src/: renderer.cpp  renderer.hpp
src/Renderer/tests/: test_polygon.cpp
src/Triangles/: CMakeLists.txt
src/Triangles/src/: polygon.cpp  polygon.hpp
src/Triangles/tests/: test_polygon.cpp
